--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "github-vscode-theme",
-  "displayName": "GitHub Theme",
-  "description": "GitHub theme for VS Code",
-  "version": "6.3.4",
-  "publisher": "GitHub",
+  "name": "primo-vscode-theme",
+  "displayName": "Primo Theme",
+  "description": "Primo - A slimmed down version of GitHub's theme for VS Code still relying on the Primer design system.",
+  "version": "0.1.0",
+  "publisher": "aaronmbos",
   "license": "MIT",
   "icon": "icon.png",
   "galleryBanner": {
@@ -12,10 +12,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/primer/github-vscode-theme"
+    "url": "https://github.com/aaronmbos/primo-vscode-theme"
   },
   "bugs": {
-    "url": "https://github.com/primer/github-vscode-theme/issues"
+    "url": "https://github.com/aaronmbos/primo-vscode-theme/issues"
   },
   "engines": {
     "vscode": "^1.43.0"
@@ -29,52 +29,54 @@
     "light",
     "dark",
     "protanopia",
-    "colorblind"
+    "colorblind",
+    "primer",
+    "primo"
   ],
   "contributes": {
     "themes": [
       {
-        "label": "GitHub Light Default",
+        "label": "Primo Light Default",
         "uiTheme": "vs",
         "path": "./themes/light-default.json"
       },
       {
-        "label": "GitHub Light High Contrast",
+        "label": "Primo Light High Contrast",
         "uiTheme": "hc-light",
         "path": "./themes/light-high-contrast.json"
       },
       {
-        "label": "GitHub Light Colorblind (Beta)",
+        "label": "Primo Light Colorblind (Beta)",
         "uiTheme": "vs",
         "path": "./themes/light-colorblind.json"
       },
       {
-        "label": "GitHub Dark Default",
+        "label": "Primo Dark Default",
         "uiTheme": "vs-dark",
         "path": "./themes/dark-default.json"
       },
       {
-        "label": "GitHub Dark High Contrast",
+        "label": "Primo Dark High Contrast",
         "uiTheme": "hc-black",
         "path": "./themes/dark-high-contrast.json"
       },
       {
-        "label": "GitHub Dark Colorblind (Beta)",
+        "label": "Primo Dark Colorblind (Beta)",
         "uiTheme": "vs-dark",
         "path": "./themes/dark-colorblind.json"
       },
       {
-        "label": "GitHub Dark Dimmed",
+        "label": "Primo Dark Dimmed",
         "uiTheme": "vs-dark",
         "path": "./themes/dark-dimmed.json"
       },
       {
-        "label": "GitHub Light",
+        "label": "Primo Light",
         "uiTheme": "vs",
         "path": "./themes/light.json"
       },
       {
-        "label": "GitHub Dark",
+        "label": "Primo Dark",
         "uiTheme": "vs-dark",
         "path": "./themes/dark.json"
       }
@@ -92,14 +94,9 @@
   "scripts": {
     "start": "nodemon --watch src src/index.js",
     "build": "node src/index.js && mkdir -p build",
-    "package": "vsce package -o ./build/github-vscode-theme.vsix",
+    "package": "vsce package -o ./build/primo-vscode-theme.vsix",
     "prepublishOnly": "npm run build && vsce publish",
     "release": "changeset publish"
-  },
-  "__metadata": {
-    "id": "7328a705-91fc-49e6-8293-da6f112e482d",
-    "publisherDisplayName": "GitHub",
-    "publisherId": "7c1c19cd-78eb-4dfb-8999-99caf7679002"
   },
   "publishConfig": {
     "access": "public"
