Preparing for initial release

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "primo-vscode-theme",
   "displayName": "Primo Theme",
-  "description": "Primo - A slimmed down version of GitHub's theme for VS Code still relying on the Primer design system.",
-  "version": "0.1.2",
+  "description": "Primo - A minimal version of GitHub's theme for VS Code still relying on the Primer design system.",
+  "version": "0.3.0",
   "publisher": "aaronmbos",
   "license": "MIT",
   "icon": "icon.png",
